Fix issue with large gap appearing below dropbox widget

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -1129,6 +1129,11 @@
 // ================================================================================================
 .widget.dropbox {
 	.small-widget;
+
+	&:before,
+	&:after {
+		clear: none;
+	}
 }
 
 // ================================================================================================
